fix: added basic info and fixed spacing

--- a/flightpub/src/Admin/AdminStyles.css
+++ b/flightpub/src/Admin/AdminStyles.css
@@ -10,7 +10,7 @@
 
 .user-table > div {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 	margin: 0;
 }
 
